--- a/src/WebDebug/MasterPage.master
+++ b/src/WebDebug/MasterPage.master
@@ -9,7 +9,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head runat="server">
     <title>Lephone's WebEntry</title>
-    <link href="styles/scaffolding.css" type="text/css" />
+    <link href="~/styles/scaffolding.css" type="text/css" rel="Stylesheet" />
 </head>
 <body>
     <asp:contentplaceholder id="ContentPlaceHolder1" runat="server">
