--- a/src/Soaring/main.master
+++ b/src/Soaring/main.master
@@ -21,11 +21,13 @@
     </div>
     <div class="header">
         <div id="navigator"> | 
-            <%= LinkTo.Controller("workitem").Action("new").Title("New") %> | 
+            <%= LinkTo.Controller("project").Title("Projects") %> | 
+            <%= LinkTo.Controller("requirement").Title("Requirements")%> | 
+            <%= LinkTo.Controller("task").Title("Tasks")%> | 
+            <%= LinkTo.Controller("bug").Title("Bugs")%> | 
         </div>
         <div id="oprator"> | 
-            <%= LinkTo.Controller("workitem").Title("List") %> | 
-            <%= LinkTo.Controller("workitem").Action("grid").Title("Grid") %> | 
+            <%= LinkTo.Controller("user").Action("logout").Title("Logout") %> | 
         </div>
     </div>
     <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
